--- a/policy-navigator-agent/.env.example
+++ b/policy-navigator-agent/.env.example
@@ -1,4 +1,3 @@
 UPSTAGE_API_KEY=your_api_key_here
-UPSTAGE_BASE_URL=https://api.upstage.ai/v1/solar
+UPSTAGE_BASE_URL=https://api.upstage.ai
 SOLAR_MODEL=solar-pro2
-MOCK_MODE=true
